--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>四月は君の嘘</h1>
   <img src="./image/wallpaperbetter (2).jpg">
-  <h2>春風</h2>
+  <h1><a href="https://www.google.com/">Google</a></h1>
 </body>
 </html>
